--- a/prepare-env/action.yaml
+++ b/prepare-env/action.yaml
@@ -22,9 +22,10 @@ runs:
         requirement_files: requirements.txt
 
     - name: Check cache
-      uses: syphar/restore-pip-download-cache@v1
       if: steps.cache-virtualenv.outputs.cache-hit != 'true'
+      uses: syphar/restore-pip-download-cache@v1
 
     - name: Install python modules
+      shell: bash
       run: pip install -r requirements.txt
       if: steps.cache-virtualenv.outputs.cache-hit != 'true'
