--- a/prepare-env/action.yaml
+++ b/prepare-env/action.yaml
@@ -14,7 +14,7 @@ runs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
-        cache: 'pipenv'
+        cache: 'pip'
 
     - name: Install python modules
       shell: bash
